<resources>
    <string name="app_name">DuoLibras</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prosseguir_login">Prosseguir</string>
    <string name="title_activity_tela_boas_vindas">tela_boas_vindas</string>
    <string name="title_activity_prim_fase">prim_fase</string>
    <string name="projeto_duolibras_boa_vinda">Projeto DuoLibras</string>
    <string name="title_activity_prim_tarefa">prim_tarefa</string>
    <string name="info_proj">O projeto DuoLibras e um projeto desenvolvido pelo academico do curso de Sitemas de informação, Cristian Kirsch</string>
    <string name="projeto_duolibras_prim_fase">Projeto DuoLibras</string>
    <string name="metodo_func">O projeto é basado na plataforma de ensino DuoLinguo, onde é ultilizado jogos para o aprendizado, no nosso caso será ultilizado o mesmo conceito usando imagens para o aprendizado</string>
    <string name="prox_tela_boa_vinda">Na proxima tela será apresentado como funciona as fases do jogo. Vamos la</string>
    <string name="prosseguir_boa_vinda">Prosseguir</string>
    <string name="projeto_duolibras_login">Projeto DuoLibras</string>
    <string name="prosseguir_prim_fase">Prosseguir</string>
    <string name="info_prim_fase">Nessa primeira fase você será a´presentado aos conceitos basico de libras, aprendendo a se comunicar de forma basica. Vamos lá</string>
    <string name="fase_1">Fase 1</string>
    <string name="info_fases">O jogo é dividido em fases onde dentro de cada fase existe 3 tarefas, o conceito de tarefa será apresentado na proxima tela</string>
    <string name="projeto_duolibras_prim_tarefa">Projeto DuoLibras</string>
    <string name="prosseguir_prim_tarefa">Prosseguir</string>
    <string name="tarefa_1">Tarefa 1</string>
    <string name="tarefa_2">Tarefa 2</string>
    <string name="info_tarefa_1">O jogo é divido por tarefas, onde cada tarefa terá um total de 03 questões</string>
    <string name="info_tarefa_2">A segunda tarefa é composta por questões sobre os numeros em libras. Vamos lá</string>
    <string name="info_tarefa_1_1">A primeira tarefa é composta por questões do alfabeto em libras. Vamos lá</string>
    <string name="title_activity_login">login</string>
    <string name="questao_1">Questão 1</string>
    <string name="questao_2">Questão 2</string>
    <string name="questao_3">Questão 3</string>
    <string name="questao_4">Questão 4</string>
    <string name="questao_5">Questão 5</string>
    <string name="questao_6">Questão 6</string>
    <string name="info_quest_1">Assinale a imagem que mostra a letra "A"</string>
    <string name="info_quest_2">Assinale a imagem que mostra a letra "D"</string>
    <string name="info_quest_3">Assinale a imagem que mostra a letra "G"</string>
    <string name="info_quest_4">Assinale a imagem que mostra o numero 1(um)</string>
    <string name="info_quest_5">Assinale a imagem que mostra o numero 8(oito)</string>
    <string name="info_quest_6">Assinale a alternativa correspondente ao numero exibido</string>
    <string name="altern_a">Letra A</string>
    <string name="altern_b">Letra B</string>
    <string name="altern_c">Letra C</string>
    <string name="altern_d">Letra D</string>
    <string name="altern_a_num">Numero 4</string>
    <string name="altern_b_num">Numero 10</string>
    <string name="altern_c_num">Numero 7</string>
    <string name="altern_d_num">Numero 15</string>
    <string name="title_activity_questao_2">questao_2</string>
    <string name="title_activity_questao_3">questao_3</string>
    <string name="title_activity_seg_tarefa">seg_tarefa</string>
    <string name="title_activity_questao_4">questao_4</string>
    <string name="title_activity_questao_5">questao_5</string>
    <string name="title_activity_questao_6">questao_6</string>
    <string name="title_activity_prim_questao">Prim_questao</string>
</resources>
